# oodf

./: .gitignore  README.md  idea.oodf  lang-rules  upload-python.sh
examples/: all.oodf  comments.oodf  interpolation.oodf  keynotes.oodf  operations.oodf  variables.oodf
libraries/python/: setup.cfg
libraries/python/oodf/: methods.py  tokens.py
libraries/python/oodf/core/: __init__.py  lexer.py  transpiler.py
libraries/python/oodf/exceptions/: parser.py
libraries/python/oodf/utils/: __init__.py
libraries/python/tests/: __init__.py  test_comments.py  test_keynotes.py  test_variable.py  utils.py
