[metadata]
long_description = file: "README.md"
long_description_content_type = text/markdown
keywords = oodf, file, format
license_file = LICENSE
platform = all
url = https://oodf.arthurdw.com
project_urls =
    Github = https://github.com/Arthurdw/oodf
    PyPI = https://pypi.org/project/oodf/
;    Docs =
classifiers =
    Development Status :: 1 - Planning
;    Development Status :: 2 - Pre-Alpha
;    Development Status :: 3 - Alpha
;    Development Status :: 4 - Beta
;    Development Status :: 5 - Production/Stable
;    Development Status :: 6 - Mature
;    Development Status :: 7 - Inactive
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
python_requires = >=3.6
packages = find:
package_dir =
    proj=src

[options.package_data]
oodf = py.typed
